--- a/MyShop.Web/Views/Customer/Index.cshtml
+++ b/MyShop.Web/Views/Customer/Index.cshtml
@@ -14,6 +14,7 @@
                 <span class="text-muted">Customer </span>
                 <span class="badge badge-secondary badge-pill">@customer.Name</span>
             </h4>
+            <img src="data:image/jpeg;base64,@System.Text.Encoding.Default.GetString(customer.ProfilePic)" width="200" />
             <div>
                 <p>@customer.ShippingAddress</p>
                 <p>@customer.City</p>
